fix(styles): adjust text alignment for module buttons

--- a/client/src/templates/Introduction/components/super-block-accordion.css
+++ b/client/src/templates/Introduction/components/super-block-accordion.css
@@ -71,9 +71,16 @@
 .super-block-accordion .module-button-left,
 .super-block-accordion .module-button-right {
   display: flex;
-  text-align: start;
   align-items: center;
   gap: 10px;
+}
+
+.super-block-accordion .module-button-left {
+  text-align: start;
+}
+
+.super-block-accordion .module-button-right {
+  text-align: end;
 }
 
 .super-block-accordion .module-steps {
